--- a/po/bg.po
+++ b/po/bg.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the gstreamer package.
 # Alexander Shopov <ash@contact.bg>, 2005, 2006, 2007, 2008, 2009, 2010.
 #
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.26.2\n"
+"Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-23 20:57+0100\n"
-"PO-Revision-Date: 2010-02-23 10:27+0200\n"
+"POT-Creation-Date: 2010-11-17 23:54+0000\n"
+"PO-Revision-Date: 2010-11-04 14:22+0200\n"
 "Last-Translator: Alexander Shopov <ash@kambanaria.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "Language: bg\n"
@@ -158,7 +159,7 @@ msgid "Could not configure supporting library."
 msgstr "Помощната библиотека не може да бъде настроена."
 
 msgid "Encoding error."
-msgstr ""
+msgstr "Грешка при кодиране."
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer получи обща грешка в ресурс."
@@ -306,13 +307,11 @@ msgstr "дата"
 msgid "date the data was created (as a GDate structure)"
 msgstr "дата на създаване на данните (като структура GDate)"
 
-#, fuzzy
 msgid "datetime"
-msgstr "дата"
+msgstr "момент"
 
-#, fuzzy
 msgid "date and time the data was created (as a GstDateTime structure)"
-msgstr "дата на създаване на данните (като структура GDate)"
+msgstr "момент на създаване на данните (като структура GstDateTime)"
 
 msgid "genre"
 msgstr "жанр"
@@ -623,65 +622,62 @@ msgstr ""
 "надморска височина на мястото на запис или създаване на медията в метри "
 "според WGS84 (0 при средното морско равнище)"
 
-#, fuzzy
 msgid "geo location country"
-msgstr "географска дължина"
+msgstr "държава по координати"
 
-#, fuzzy
 msgid "country (english name) where the media has been recorded or produced"
-msgstr "разбираемо описание на мястото на запис или създаване на медията"
+msgstr "държавата на запис или създаване на медията (на английски)"
 
-#, fuzzy
 msgid "geo location city"
-msgstr "географска широчина"
+msgstr "град по координати"
 
-#, fuzzy
 msgid "city (english name) where the media has been recorded or produced"
-msgstr "разбираемо описание на мястото на запис или създаване на медията"
+msgstr "град на запис или създаване на медията (на английски)"
 
-#, fuzzy
 msgid "geo location sublocation"
-msgstr "надморска височина"
+msgstr "квартал по координати"
 
 msgid ""
 "a location whithin a city where the media has been produced or created (e.g. "
 "the neighborhood)"
-msgstr ""
+msgstr "квартал в града на запис или създаване на медията"
 
-#, fuzzy
 msgid "geo location horizontal error"
-msgstr "местоположение"
+msgstr "хоризонтална грешка по координати"
 
 msgid "expected error of the horizontal positioning measures (in meters)"
-msgstr ""
+msgstr "очаквана грешка по хоризонтал (в метри)"
 
-#, fuzzy
 msgid "geo location movement speed"
-msgstr "географска дължина"
+msgstr "скорост по координати"
 
 msgid ""
 "movement speed of the capturing device while performing the capture in m/s"
-msgstr ""
+msgstr "скорост на движение на входното устройство при записа [m/s]"
 
-#, fuzzy
 msgid "geo location movement direction"
-msgstr "надморска височина"
+msgstr "посока на движение по координати"
 
 msgid ""
 "indicates the movement direction of the device performing the capture of a "
 "media. It is represented as degrees in floating point representation, 0 "
 "means the geographic north, and increases clockwise"
 msgstr ""
+"посока на движение на входното устройство при записа. Стойността е в градуси "
+"в десетично представяне. 0 е географският север. Стойността расте по посока "
+"на часовниковата стрелка"
 
-#, fuzzy
 msgid "geo location capture direction"
-msgstr "надморска височина"
+msgstr "посока на заснемане по координати"
 
 msgid ""
 "indicates the direction the device is pointing to when capturing  a media. "
 "It is represented as degrees in floating point  representation, 0 means the "
 "geographic north, and increases clockwise"
 msgstr ""
+"посока на входното устройство при записа. Стойността е в градуси в десетично "
+"представяне. 0 е географският север. Стойността расте по посока на "
+"часовниковата стрелка"
 
 #. TRANSLATORS: 'show name' = 'TV/radio/podcast show name' here
 msgid "show name"
@@ -735,48 +731,44 @@ msgstr ""
 "Сбира в една група произведение, което е от няколко части, напр. частите на "
 "концерт. Това ниво е по-високо от песен, но по-ниско от албум."
 
-#, fuzzy
 msgid "user rating"
-msgstr "продължителност"
+msgstr "оценка"
 
 msgid ""
 "Rating attributed by a user. The higher the rank, the more the user likes "
 "this media"
 msgstr ""
+"Оценка според потребителя. По-висока стойност означава по-силно предпочитание"
 
 msgid "device manufacturer"
-msgstr ""
+msgstr "производител на устройство"
 
-#, fuzzy
 msgid "Manufacturer of the device used to create this media"
-msgstr "версия на кодера, чрез който е кодиран този поток"
+msgstr "Производител на устройството, с което е създадена медията"
 
 msgid "device model"
-msgstr ""
+msgstr "модел на устройство"
 
-#, fuzzy
 msgid "Model of the device used to create this media"
-msgstr "версия на кодера, чрез който е кодиран този поток"
+msgstr "Модел на устройството, с което е създадена медията"
 
-#, fuzzy
 msgid "application name"
-msgstr "местоположение"
+msgstr "име на програма"
 
-#, fuzzy
 msgid "Application used to create the media"
-msgstr "версия на кодера, чрез който е кодиран този поток"
+msgstr "Програмата, с което е създадена медията"
 
 msgid "application data"
-msgstr ""
+msgstr "данни от програмата"
 
 msgid "Arbitrary application data to be serialized into the media"
-msgstr ""
+msgstr "Произволни данни от програма, поставени в медията"
 
 msgid "image orientation"
-msgstr ""
+msgstr "ориентация"
 
 msgid "How the image should be rotated or flipped before display"
-msgstr ""
+msgstr "Как да се завърти изображението при показване"
 
 msgid ", "
 msgstr ", "
@@ -919,9 +911,8 @@ msgstr "Не е указана временна папка"
 msgid "Could not create temp file \"%s\"."
 msgstr "Не може да се създаде временният файл „%s“."
 
-#, fuzzy
 msgid "Error while writing to download file."
-msgstr "Грешка при запис във файл „%s“."
+msgstr "Грешка при запис в сваления файл."
 
 msgid "caps"
 msgstr "възможности"
@@ -958,12 +949,17 @@ msgstr "може да се контролира"
 
 msgid "changeable in NULL, READY, PAUSED or PLAYING state"
 msgstr ""
+"може да се променя само в състоянията NULL (зануляване), READY (готовност), "
+"PAUSED (на пауза) или PLAYING (изпълнение)"
 
 msgid "changeable only in NULL, READY or PAUSED state"
 msgstr ""
+"може да се променя само в състоянията NULL (зануляване), READY (готовност) "
+"или PAUSED (на пауза)"
 
 msgid "changeable only in NULL or READY state"
 msgstr ""
+"може да се променя само в състоянията NULL (зануляване) или READY (готовност)"
 
 msgid "Blacklisted files:"
 msgstr "Забранени файлове:"
@@ -1148,9 +1144,8 @@ msgstr "ФАЙЛ"
 msgid "Do not install a fault handler"
 msgstr "Да не се инсталира модул за обработка на грешки"
 
-#, fuzzy
 msgid "Do not install signal handlers for SIGUSR1 and SIGUSR2"
-msgstr "Да не се инсталира модул за обработка на грешки"
+msgstr "Да не се включват функции за обработка на сигналите SIGUSR1 и SIGUSR2"
 
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr ""
