--- a/po/es.po
+++ b/po/es.po
@@ -1,14 +1,14 @@
-# translation of gstreamer-0.10.29.2.po to Español
+# translation of gstreamer-0.10.30.3.po to Español
 # spanish translation for gstreamer
 # This file is put in the public domain.
 # Jorge González González <aloriel@gmail.com>, 2009, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.29.2\n"
+"Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-10-16 00:12+0100\n"
-"PO-Revision-Date: 2010-08-17 20:00+0200\n"
+"POT-Creation-Date: 2010-11-17 23:54+0000\n"
+"PO-Revision-Date: 2010-11-01 18:11+0100\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "Language: es\n"
@@ -158,7 +158,7 @@ msgid "Could not configure supporting library."
 msgstr "No se pudo configurar la biblioteca de soporte."
 
 msgid "Encoding error."
-msgstr ""
+msgstr "Error de codificación."
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer encontró un error general de recurso."
@@ -307,13 +307,12 @@ msgstr "fecha"
 msgid "date the data was created (as a GDate structure)"
 msgstr "fecha en la que se crearon los datos (como estructura GDate)"
 
-#, fuzzy
 msgid "datetime"
-msgstr "fecha"
+msgstr "fecha y hora"
 
-#, fuzzy
 msgid "date and time the data was created (as a GstDateTime structure)"
-msgstr "fecha en la que se crearon los datos (como estructura GDate)"
+msgstr ""
+"fecha y hora en la que se crearon los datos (como estructura GstDateTime)"
 
 msgid "genre"
 msgstr "género"
@@ -652,12 +651,12 @@ msgstr ""
 "una ubicación en una ciudad donde se ha producido o creado el medio (ej. el "
 "barrio)"
 
-#, fuzzy
 msgid "geo location horizontal error"
-msgstr "nombre de la geoubicación"
+msgstr "error horizontal de geolocalización"
 
 msgid "expected error of the horizontal positioning measures (in meters)"
 msgstr ""
+"error esperado de las medidas de posicionamiento horizontal (en metros)"
 
 msgid "geo location movement speed"
 msgstr "velocidad de movimiento de la geolocalización"
@@ -765,19 +764,17 @@ msgstr "modelo del dispositivo"
 msgid "Model of the device used to create this media"
 msgstr "Modelo del dispositivo usado para crear este medio"
 
-#, fuzzy
 msgid "application name"
-msgstr "nombre de la geoubicación"
+msgstr "nombre de la aplicación"
 
-#, fuzzy
 msgid "Application used to create the media"
-msgstr "Modelo del dispositivo usado para crear este medio"
+msgstr "Aplicación usada para crear el medio"
 
 msgid "application data"
-msgstr ""
+msgstr "datos de la aplicación"
 
 msgid "Arbitrary application data to be serialized into the media"
-msgstr ""
+msgstr "Datos arbitrarios de la aplicación para serializarlos en el medio"
 
 msgid "image orientation"
 msgstr "orientación de la imagen"
@@ -964,13 +961,13 @@ msgid "controllable"
 msgstr "controlable"
 
 msgid "changeable in NULL, READY, PAUSED or PLAYING state"
-msgstr ""
+msgstr "intercambiable entre los estados NULL, READY, PAUSED o PLAYING"
 
 msgid "changeable only in NULL, READY or PAUSED state"
-msgstr ""
+msgstr "intercambiable sólo entre los estados NULL, READY o PAUSED"
 
 msgid "changeable only in NULL or READY state"
-msgstr ""
+msgstr "intercambiable sólo entre los estados NULL o READY"
 
 msgid "Blacklisted files:"
 msgstr "Archivos en la lista negra:"
